optimizer/src/snapshots/spec_rename_builder_io.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from "@builder.io/qwik";
import { isDev } from "@builder.io/qwik/build";
import { stuff } from "@builder.io/qwik-city";
import { moreStuff } from "@builder.io/qwik-city/more/here";
import { qwikify$ } from "@builder.io/qwik-react";
import sdk from "@builder.io/sdk";

export const Foo = qwikify$(MyReactComponent);

export const Bar = $("a thing");

export const App = component$(() => {
	sdk.hello();
	if (isDev) {
		stuff()
	} else {
		moreStuff()
	}
	return "hi";
});

============================= test.tsx_Bar_GXXnVUtURSw.js (ENTRY POINT)==

export const Bar_GXXnVUtURSw = "a thing";


None
/*
{
  "origin": "test.tsx",
  "name": "Bar_GXXnVUtURSw",
  "entry": null,
  "displayName": "test.tsx_Bar",
  "hash": "GXXnVUtURSw",
  "canonicalFilename": "test.tsx_Bar_GXXnVUtURSw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    362,
    371
  ]
}
*/
============================= test.tsx_Foo_qwikify_0Yoy9qA0SC0.js (ENTRY POINT)==

export const Foo_qwikify_0Yoy9qA0SC0 = MyReactComponent;


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_qwikify_0Yoy9qA0SC0",
  "entry": null,
  "displayName": "test.tsx_Foo_qwikify",
  "hash": "0Yoy9qA0SC0",
  "canonicalFilename": "test.tsx_Foo_qwikify_0Yoy9qA0SC0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false,
  "loc": [
    321,
    337
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { isDev } from "@qwik.dev/core/build";
import { moreStuff } from "@qwik.dev/router/more/here";
import { stuff } from "@qwik.dev/router";
import sdk from "@builder.io/sdk";
export const App_component_ckEPmXZlub0 = ()=>{
	sdk.hello();
	if (isDev) {
		stuff();
	} else {
		moreStuff();
	}
	return "hi";
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    405,
    493
  ]
}
*/
============================= test.js ==

import { qwikifyQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qwikifyQrl } from "@qwik.dev/react";
const i_0Yoy9qA0SC0 = ()=>import("./test.tsx_Foo_qwikify_0Yoy9qA0SC0");
const i_GXXnVUtURSw = ()=>import("./test.tsx_Bar_GXXnVUtURSw");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const Foo = /*#__PURE__*/ qwikifyQrl(/*#__PURE__*/ qrl(i_0Yoy9qA0SC0, "Foo_qwikify_0Yoy9qA0SC0"));
export const Bar = /*#__PURE__*/ qrl(i_GXXnVUtURSw, "Bar_GXXnVUtURSw");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
