optimizer/src/snapshots/spec_should_convert_jsx_events.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

const ManyEventsComponent = component$(() => {
	return (
		<div>
			<button
				onClick$={() => {}}
				onDblClick$={() => {}}
			>
				click
			</button>
			<button
				onClick$={() => {}}
				onBlur$={() => {}}
				on-anotherCustom$={() => {}}
				document:onFocus$={() => {}}
				window:onClick$={() => {}}
			>
				click
			</button>
		</div>
	);
});

============================= test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_click_1",
  "hash": "hyur9k7tWAQ",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_click_CA5nym40iWI = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_click_CA5nym40iWI",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_click",
  "hash": "CA5nym40iWI",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_anotherCustom",
  "hash": "6leHa5aTNXQ",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "on-anotherCustom$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_ndbrzxiyG3g.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_YvOdIHUxyec = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec");
const i_lDRe1poy0ZE = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE");
const i_6leHa5aTNXQ = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ");
const i_ZXch3Eg0VPI = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI");
const i_hyur9k7tWAQ = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ");
const i_l0eJUuALR5Y = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y");
const i_CA5nym40iWI = ()=>import("./test.tsx_ManyEventsComponent_component_div_button_on_click_CA5nym40iWI");
export const ManyEventsComponent_component_ndbrzxiyG3g = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("button", {
		"on:click": /*#__PURE__*/ qrl(i_CA5nym40iWI, "ManyEventsComponent_component_div_button_on_click_CA5nym40iWI"),
		"on:dblclick": /*#__PURE__*/ qrl(i_l0eJUuALR5Y, "ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y")
	}, null, "click", 3, null), /*#__PURE__*/ _jsxSorted("button", {
		"on-document:focus": /*#__PURE__*/ qrl(i_lDRe1poy0ZE, "ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE"),
		"on-window:click": /*#__PURE__*/ qrl(i_YvOdIHUxyec, "ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec"),
		"on:another-custom": /*#__PURE__*/ qrl(i_6leHa5aTNXQ, "ManyEventsComponent_component_div_button_on_anotherCustom_6leHa5aTNXQ"),
		"on:blur": /*#__PURE__*/ qrl(i_ZXch3Eg0VPI, "ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI"),
		"on:click": /*#__PURE__*/ qrl(i_hyur9k7tWAQ, "ManyEventsComponent_component_div_button_on_click_1_hyur9k7tWAQ")
	}, null, "click", 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_ndbrzxiyG3g",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "ndbrzxiyG3g",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_ndbrzxiyG3g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    398
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_focus",
  "hash": "lDRe1poy0ZE",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_focus_lDRe1poy0ZE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "document:onFocus$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_dbl_click",
  "hash": "l0eJUuALR5Y",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_dbl_click_l0eJUuALR5Y",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onDblClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_click_2",
  "hash": "YvOdIHUxyec",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_click_2_YvOdIHUxyec",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "window:onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI.js (ENTRY POINT)==

export const ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_on_blur",
  "hash": "ZXch3Eg0VPI",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_on_blur_ZXch3Eg0VPI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onBlur$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ndbrzxiyG3g = ()=>import("./test.tsx_ManyEventsComponent_component_ndbrzxiyG3g");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ndbrzxiyG3g, "ManyEventsComponent_component_ndbrzxiyG3g"));


None
== DIAGNOSTICS ==

[]
