optimizer/src/snapshots/spec_should_extract_single_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
export const App = component$(() => {
	const data = useSignal<Signal<any>[]>([]);
	const selectedItem = useSignal<any | null>(null);
    return (
        <div>
          {data.value.map((row) => (
              <tr
                key={untrack(() => row.value.id)}
                class={row.value.selected.value ? "danger" : ""}
              >
                <td class="col-md-1">{row.value.id}</td>
                <td class="col-md-4">
                  <a
                    onClick$={() => {
                      if (selectedItem.value) {
                        selectedItem.value.selected.value = false;
                      }
                      selectedItem.value = row.value;
                      row.value.selected.value = true;
                    }}
                  >
                    {row.value.label.value}
                  </a>
                </td>
                <td class="col-md-1">
                  <a
                    onClick$={() => {
                      const dataValue = untrack(() => data.value);
                      data.value = dataValue.toSpliced(
                        dataValue.findIndex((d) => d.value.id === row.value.id),
                        1,
                      );
                    }}
                  >
                    <span aria-hidden="true">x</span>
                  </a>
                </td>
                <td class="col-md-6" />
              </tr>
          ))}
        </div>
      );
    });

============================= test.tsx_App_component_div_tr_td_a_on_click_Ikaw4baZqAM.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_tr_td_a_on_click_Ikaw4baZqAM = (_, _1, row)=>{
	const [selectedItem] = useLexicalScope();
	if (selectedItem.value) {
		selectedItem.value.selected.value = false;
	}
	selectedItem.value = row.value;
	row.value.selected.value = true;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_on_click_Ikaw4baZqAM",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_on_click",
  "hash": "Ikaw4baZqAM",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_on_click_Ikaw4baZqAM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_div_tr_td_a_on_click_1_0BckO6FtVZU.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_tr_td_a_on_click_1_0BckO6FtVZU = (_, _1, row)=>{
	const [data] = useLexicalScope();
	const dataValue = untrack(()=>data.value);
	data.value = dataValue.toSpliced(dataValue.findIndex((d)=>d.value.id === row.value.id), 1);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_on_click_1_0BckO6FtVZU",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_on_click_1",
  "hash": "0BckO6FtVZU",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_on_click_1_0BckO6FtVZU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_0BckO6FtVZU = ()=>import("./test.tsx_App_component_div_tr_td_a_on_click_1_0BckO6FtVZU");
const i_Ikaw4baZqAM = ()=>import("./test.tsx_App_component_div_tr_td_a_on_click_Ikaw4baZqAM");
const _hf0 = (p0)=>p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?`danger`:``";
const _hf1 = (p0)=>p0.value.id;
const _hf1_str = "p0.value.id";
export const App_component_ckEPmXZlub0 = ()=>{
	const data = useSignal([]);
	const selectedItem = useSignal(null);
	const App_component_div_tr_td_a_on_click_Ikaw4baZqAM = /*#__PURE__*/ qrl(i_Ikaw4baZqAM, "App_component_div_tr_td_a_on_click_Ikaw4baZqAM", [selectedItem]);
	const App_component_div_tr_td_a_on_click_1_0BckO6FtVZU = /*#__PURE__*/ qrl(i_0BckO6FtVZU, "App_component_div_tr_td_a_on_click_1_0BckO6FtVZU", [data]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("tr", { class: _fnSignal(_hf0, [row], _hf0_str) }, null, [
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-1" }, _fnSignal(_hf1, [row], _hf1_str), 1, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-4" }, /*#__PURE__*/ _jsxSorted("a", {
			"on:click": App_component_div_tr_td_a_on_click_Ikaw4baZqAM,
			"q:p": row
		}, null, _wrapProp(row.value.label), 1, null), 3, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-1" }, /*#__PURE__*/ _jsxSorted("a", {
			"on:click": App_component_div_tr_td_a_on_click_1_0BckO6FtVZU,
			"q:p": row
		}, null, /*#__PURE__*/ _jsxSorted("span", null, { aria-hidden: "true" }, "x", 3, null), 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("td", null, { class: "col-md-6" }, null, 3, null)
	], 3, untrack(()=>row.value.id))), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    1545
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
