optimizer/src/snapshots/spec_should_extract_single_qrl_2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, useSignal } from '@qwik.dev/core';
const Parent = component$(() => {
const cart = useStore<Cart>([]);
const results = useSignal(['foo', 'bar']);

return (
  <div>
    <button id="first" onClick$={() => (results.value = ['item1', 'item2'])}></button>

    {results.value.map((item, key) => (
      <button
        id={'second-' + key}
        onClick$={() => {
          cart.push(item);
        }}
      >
        {item}
      </button>
    ))}
    <ul>
      {cart.map((item) => (
        <li>
          <span>{item}</span>
        </li>
      ))}
    </ul>
  </div>
);
});

============================= test.tsx_Parent_component_0TaiDayHrlo.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_MKOvE0RDw7w = ()=>import("./test.tsx_Parent_component_div_map_button_onClick_MKOvE0RDw7w");
const i_38pgNOXzh6g = ()=>import("./test.tsx_Parent_component_div_button_onClick_38pgNOXzh6g");
export const Parent_component_0TaiDayHrlo = ()=>{
	const cart = useStore([]);
	const results = useSignal(["foo", "bar"]);
	const Parent_component_div_map_button_onClick_MKOvE0RDw7w = /*#__PURE__*/ qrl(i_MKOvE0RDw7w, "Parent_component_div_map_button_onClick_MKOvE0RDw7w", [cart]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_38pgNOXzh6g, "Parent_component_div_button_onClick_38pgNOXzh6g", [results]) }, { id: "first" }, null, 3, null),
		results.value.map((item, key)=>/*#__PURE__*/ _jsxSorted("button", {
			id: "second-" + key,
			"on:click": Parent_component_div_map_button_onClick_MKOvE0RDw7w,
			"q:p": item
		}, null, item, 1, null)),
		/*#__PURE__*/ _jsxSorted("ul", null, null, cart.map((item)=>/*#__PURE__*/ _jsxSorted("li", null, null, /*#__PURE__*/ _jsxSorted("span", null, null, item, 1, null), 3, null)), 1, null)
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    92,
    603
  ]
}
*/
============================= test.tsx_Parent_component_div_button_onClick_38pgNOXzh6g.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Parent_component_div_button_onClick_38pgNOXzh6g = ()=>{
	const [results] = useLexicalScope();
	return results.value = ["item1", "item2"];
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_button_onClick_38pgNOXzh6g",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_button_onClick",
  "hash": "38pgNOXzh6g",
  "canonicalFilename": "test.tsx_Parent_component_div_button_onClick_38pgNOXzh6g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Parent_component_div_map_button_onClick_MKOvE0RDw7w.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Parent_component_div_map_button_onClick_MKOvE0RDw7w = (_, _1, item)=>{
	const [cart] = useLexicalScope();
	cart.push(item);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_map_button_onClick_MKOvE0RDw7w",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_map_button_onClick",
  "hash": "MKOvE0RDw7w",
  "canonicalFilename": "test.tsx_Parent_component_div_map_button_onClick_MKOvE0RDw7w",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_0TaiDayHrlo = ()=>import("./test.tsx_Parent_component_0TaiDayHrlo");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_0TaiDayHrlo, "Parent_component_0TaiDayHrlo"));


None
== DIAGNOSTICS ==

[]
